--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@babel/core": "^7.7.7",
     "@nuxtjs/eslint-config": "^1.0.1",
     "@nuxtjs/eslint-module": "^1.0.0",
-    "@storybook/vue": "^5.2.8",
+    "@storybook/addon-docs": "^5.3.0-rc.0",
+    "@storybook/vue": "^5.3.0-rc.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
+    "react": "^16.12.0",
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.11"
   }
