--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
+    "@babel/runtime-corejs2": "^7.7.7",
     "@nuxtjs/eslint-config": "^1.0.1",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@storybook/addon-docs": "^5.3.0-rc.0",
@@ -27,6 +28,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
+    "core-js": "2",
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "react": "^16.12.0",
